2001-04-25  Dave Peticolas  <dave@krondo.com>

	* src/gnome/druid-commodity.c: do gncFileNew after gncFileQuit

	* src/guile/gnc.gwp: remove pokey functions (not used anymore)

	* src/scm/main.scm: fix bug. don't do new user dialog if we
	have a file on the command line.

	* src/FileDialog.c (gncAddHistory): fix bug. check for NULL.

	* src/guile/gnucash.c.in: include string.h

	* src/gnome/window-main.c: don't restore state for old format files

2001-04-24  Dave Peticolas  <dave@krondo.com>

	* src/scm/options.scm: check for deleted accounts in account
	list option. fix bug.

	* src/scm/report/pnl.scm: filter out non income/expense accounts

	* src/scm/report/budget-report.scm: remove

	* src/scm/qif-import/qif-to-gnc.scm: remove cruft

	* src/engine/Account.c: take out pokey warnings

2001-04-25  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/html-utilities.scm:
	(gnc:html-table-append-ruler/markup!) new function.  Also modify
	(gnc:html-build-acct-table) and other functions to use global row
	styles.

	* src/scm/html-table.scm:(gnc:html-table-prepend-row/markup!)  fix
	bug.  

	* src/scm/report/balance-sheet.scm: use new global row styles.

	* src/scm/report/stylesheet-*.scm: add new global row styles.

	* src/scm/report/transaction-report.scm: use new global row styles,
	fix bug with memo display.  Remove local color options.

2001-04-24  Bill Gribble  <grib@billgribble.com>

	* src/FileDialog.c: call book-opened-hook and book-closed-hook
	where appropriate

	* src/gnome/dialog-column-view.c: change to single-parent model

	* src/gnome/top-level.c: don't do MID state saving and restoring
	here... do it in the book save/load hooks. 

	* src/gnome/window-main.c: the configstring stored in MDI is now a
	Scheme form which restores the window state.  save/restore it.
	Also, change the MDI session name to encode the book URL
	(have to encode it to escape some chars, notably /, which MDI
	doesn't like in section names)
